# todo-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  todo.py
.github/workflows/: lint_and_test.yml  pre-commit.yml  pylint.yml  pytest.yml
tests/: conftest.py  test_views.py
todocli/: __init__.py  app.py  base.py  config.py  models.py  views.py
