[tool.poetry]
name = "todo-cli"
version = "0.1.0"
description = ""
authors = ["Ajith Aravind <ajith.aravind100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = { version = "^6.0", platform = "linux" }
sqlalchemy = { version = "^2.0.0", platform = "linux" }

[tool.poetry.group.dev.dependencies]
black = { version = "^22.12.0", platform = "linux" }
pre-commit = { version = "^3.0.1", platform = "linux" }
pytest = { version = "^7.2.1", platform = "linux" }
pytest-cov = { version = "^4.0.0", platform = "linux" }
ruff = { version = "^0.0.237", platform = "linux" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["A", "B", "C", "D", "E", "F", "I", "Q"]
fixable = ["A", "B", "C", "D", "E", "F", "I", "Q"]
ignore = ["D203", "D213"]
line-length = 88
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.black]
line-length = 88
target-version = ["py311"]
