[project]
name = "todo-cli"
readme = "readme.md"
license = { file = "license" }
requires-python = ">=3.13"
dynamic = ["version", "description", "authors", "urls", "keywords"]
dependencies = ["pyyaml>=6.0.2,<7", "sqlalchemy>=2.0.36,<3"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.7.3,<1",
]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["A", "B", "C", "D", "E", "F", "I", "Q", "S", "W", "UP", "RUF"]
fixable = ["A", "B", "C", "D", "E", "F", "I", "Q", "S", "W", "UP", "RUF"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
